@@ -4118,5 +4118,7 @@ $_LANG['Cancel changes'] = 'Anuluj zmiany';
 $_LANG['Save this item'] = 'Zapisz zmiany';
 
 $_LANG['Show deleted'] = 'Pokaż skasowane';
+$_LANG['Enter body fragment'] = 'Wprowadź fragment treści';
+$_LANG['treat as regular expression'] = 'traktuj jako wyrażenie regularne';
 
 ?>
