@@ -2,9 +2,11 @@
 {foreach $queue as $ticket}
 <TR class="{if $ticket.state == $smarty.const.RT_RESOLVED}blend {/if}highlight lms-ui-rt{if $ticket.deleted == 1 && $ticket.deltime != 0}-deleted{elseif $ticket.delcount && (ConfigHelper::checkPrivilege('helpdesk_advanced_operations'))}-partly-deleted{/if}" data-target-url="?m=rtticketview&id={$ticket.id}">
 	<TD class="text-center">
-	{if $ticket.unread}
+		{if $ticket.unread}
 		<a href="?m=rtticketview&id={$ticket.id}{if $ticket.firstunread}#rtmessage-{$ticket.firstunread}{/if}" class="lms-ui-tooltip-rtticketinfo" data-resourceid="{$ticket.id}"><img src="img/{if $ticket.priority == $smarty.const.RT_PRIORITY_CRITICAL && $ticket.state != $smarty.const.RT_RESOLVED}ring-red{else}ticket-unread{/if}.png" alt=""></a>
-	{/if}
+		{elseif $ticket.messageid}
+		<a href="?m=rtticketview&id={$ticket.id}#rtmessage-{$ticket.messageid}" class="lms-ui-tooltip-rtticketinfo" data-resourceid="{$ticket.id}"><img src="img/{if $ticket.priority == $smarty.const.RT_PRIORITY_CRITICAL && $ticket.state != $smarty.const.RT_RESOLVED}ring-red{else}ticket-unread{/if}.png" alt=""></a>
+		{/if}
 	</TD>
 	<TD class="text-center" style="background:transparent; color:{$_RT_STATES[$ticket.state].color};">
 		<span class="lms-ui-tooltip-rtticketinfo" data-resourceid="{$ticket.id}">
