@@ -125,6 +125,7 @@ version ?.??.?? (????-??-??):
   - enhancement: allow to filter document list by service type [chilan]
   - enhancement: new filter engine applied to queuelist; allow to filter deleted queues
     on queue list [chilan]
+  - enhancement: allow to search tickets by body fragment [chilan]
 
 version 1.11.23 (2018-03-21):
 
